@@ -1,31 +1,38 @@
 package fr.insee.onyxia.api.services.control.xgenerated;
 
 import fr.insee.onyxia.model.catalog.Pkg;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 @Service
 public class XGeneratedProcessor {
 
-    @Autowired private XGeneratedReader xGeneratedReader;
+    private final XGeneratedReader xGeneratedReader;
 
-    @Autowired private XGeneratedIterator xGeneratedIterator;
+    private final XGeneratedIterator xGeneratedIterator;
 
-    @Autowired private XGeneratedInjector xGeneratedInjector;
+    private final XGeneratedInjector xGeneratedInjector;
+
+    @Autowired
+    public XGeneratedProcessor(
+            XGeneratedReader xGeneratedReader,
+            XGeneratedIterator xGeneratedIterator,
+            XGeneratedInjector xGeneratedInjector) {
+        this.xGeneratedReader = xGeneratedReader;
+        this.xGeneratedIterator = xGeneratedIterator;
+        this.xGeneratedInjector = xGeneratedInjector;
+    }
 
     public XGeneratedContext readContext(Pkg pkg) {
         XGeneratedContext xGeneratedContext = new XGeneratedContext();
-        pkg.getConfig().getProperties().getProperties().entrySet().stream()
+        pkg.getConfig()
+                .getProperties()
+                .getProperties()
                 .forEach(
-                        (entry) -> {
-                            xGeneratedReader.readXGenerated(
-                                    Arrays.asList(entry.getKey()),
-                                    entry.getValue(),
-                                    xGeneratedContext);
-                        });
+                        (key, value) ->
+                                xGeneratedReader.readXGenerated(
+                                        List.of(key), value, xGeneratedContext));
         return xGeneratedContext;
     }
 
@@ -39,13 +46,5 @@ public class XGeneratedProcessor {
     public void injectIntoContext(
             Map<String, Object> target, Map<String, String> xGeneratedValues) {
         xGeneratedInjector.injectIntoContext(target, xGeneratedValues);
-    }
-
-    public XGeneratedReader getxGeneratedReader() {
-        return xGeneratedReader;
-    }
-
-    public void setxGeneratedReader(XGeneratedReader xGeneratedReader) {
-        this.xGeneratedReader = xGeneratedReader;
     }
 }
